--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -49,10 +49,10 @@
     "sap.ui5": {
         "flexEnabled": false,
         "rootView": {
-            "viewName": "logaligroup.employees.view.Main",
+            "viewName": "logaligroup.employees.view.App",
             "type": "XML",
             "async": true,
-            "id": "Main"
+            "id": "app"
         },
         "dependencies": {
             "minUI5Version": "1.66.0",
@@ -109,7 +109,7 @@
                 "routerClass": "sap.m.routing.Router",
                 "viewType": "XML",
                 "async": true,
-                "viewPath": "logaligroup.employees.view",
+                "viewPath": "logaligroup.employees.view", 
                 "controlAggregation": "pages",
                 "controlId": "app",
                 "clearControlAggregation": false
@@ -117,9 +117,16 @@
             "routes": [
                 {
                     "name": "RouteMain",
-                    "pattern": "RouteMain",
+                    "pattern": "",
                     "target": [
                         "TargetMain"
+                    ]
+                },
+                {
+                    "name": "RouteOrderDetails",
+                    "pattern": "OrderDetails/{OrderID}",
+                    "target": [
+                        "TargetOrderDetails"
                     ]
                 }
             ],
@@ -131,12 +138,9 @@
                     "viewId": "Main",
                     "viewName": "Main"
                 },
-                "TargetMasterEmployee": {
+                "TargetOrderDetails": {
                     "viewType": "XML",
-                    "transition": "slide",
-                    "clearControlAggregation": false,
-                    "viewId": "MasterEmployee",
-                    "viewName": "MasterEmployee"
+                    "viewName": "OrderDetails"
                 }
             }
         }
